# e1341

./: CHANGELOG.md  LICENSE  README.md  e1341.cabal
app/: ProjectViewer.hs  Raymarcher.hs  SolarSystem.hs  Splines.hs  TestProject.hs
mat/: default
mat/brackets/: brackets
mat/brackets/src/: shader.frag  shader.vert
mat/checkerboard/: checkerboard
mat/checkerboard/src/: shader.frag  shader.vert
mat/constant/src/: shader.frag  shader.vert
mat/fontbmpext/: fontbmpext
mat/fontbmpext/src/: shader.frag  shader.vert
mat/lineSDF/: lineSDF
mat/lineSDF/src/: shader.frag
mat/pighead/: pighead
mat/pighead/src/: shader.frag
mat/raymarch/: raymarch
mat/raymarch/src/: shader.frag  shader.frag.bak  shader.vert
mat/share/: lib.glsl
mat/splines/: splines
mat/splines/src/: shader.frag
mat/splinesB/: splinesB
mat/splinesB/src/: shader.frag
mat/uvsplines/: uvsplines
mat/uvsplines/src/: #shader.frag.bak1#  shader.frag  shader.frag.bak1  shader.frag.bak2  shader.frag~  shader.vert~
models/: adder_mk1.gltf  adder_mk1_orig.gltf  brackets.gltf  fnt_0.gltf  fnt_1.gltf  fnt_2.gltf  fnt_3.gltf  fnt_4.gltf  fnt_5.gltf  fnt_6.gltf  fnt_7.gltf  fnt_8.gltf  fnt_9.gltf  fnt_A.gltf  fnt_B.gltf  fnt_C.gltf  fnt_D.gltf  fnt_E.gltf  fnt_F.gltf  fnt_G.gltf  fnt_H.gltf  fnt_I.gltf  fnt_J.gltf  fnt_K.gltf  fnt_L.gltf  fnt_M.gltf  fnt_N.gltf  fnt_O.gltf  fnt_P.gltf  fnt_Q.gltf  fnt_R.gltf  fnt_S.gltf  fnt_T.gltf  fnt_U.gltf  fnt_V.gltf  fnt_W.gltf  fnt_X.gltf  fnt_Y.gltf  fnt_Z.gltf  fnt_a.gltf  (+52 more)
src/: GameLoop.hs  Load_glTF.hs  Load_glTF.py  Model_glTF.hs
src/Projects/: Raymarcher.hs  Test.hs  Test.hs~
